--- a/ui/index.html
+++ b/ui/index.html
@@ -171,6 +171,7 @@
                 <label>
                   <span data-i18n="label_language">Interface language</span>
                   <select id="language-select">
+                    <option value="auto" data-i18n="lang_auto">Auto (system)</option>
                     <option value="en">English</option>
                     <option value="ru">Russian</option>
                     <option value="es">Spanish</option>
