--- a/ui/index.html
+++ b/ui/index.html
@@ -181,6 +181,14 @@
                 <button class="primary" id="save-language" data-i18n="btn_save_language">Save Language</button>
               </div>
             </div>
+            <div class="card">
+              <div class="card-title" data-i18n="card_window">Window</div>
+              <div class="form">
+                <button class="ghost" id="toggle-fullscreen" data-i18n="btn_fullscreen">Fullscreen</button>
+                <button class="ghost" id="compact-window" data-i18n="btn_compact">Compact</button>
+                <button class="ghost" id="reset-window" data-i18n="btn_reset_window">Reset Size</button>
+              </div>
+            </div>
           </div>
 
           <div class="card wide">
